Fixed footer covering modal/Header font-size at bp-sml

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,9 @@ html {
   @media only screen and (max-width: 75em) {
     html {
       font-size: 50%; } }
+  @media only screen and (max-width: 31.25em) {
+    html {
+      font-size: 40%; } }
 
 *::selection {
   background-color: #aaa; }
@@ -252,7 +255,8 @@ body {
   background-image: linear-gradient(to bottom, #aaa, #555);
   grid-column: full-start / full-end;
   padding: 3rem;
-  position: relative; }
+  position: relative;
+  z-index: -1; }
 
 .nav {
   list-style: none;
@@ -325,24 +329,6 @@ p.copyright {
     @media only screen and (max-width: 53.125em) {
       .header-nav__item {
         flex: 1 1 1; } }
-    .header-nav__item--logo {
-      height: 4rem;
-      width: 4rem;
-      fill: #FFF;
-      margin: 0;
-      padding: 0;
-      transition: all .2s; }
-      .header-nav__item--logo:hover {
-        fill: #555;
-        cursor: pointer; }
-    .header-nav__item--search {
-      height: 2rem;
-      width: 2rem;
-      fill: #FFF;
-      transition: all .2s; }
-      .header-nav__item--search:hover {
-        fill: #555;
-        cursor: pointer; }
     .header-nav__item--name {
       flex: 2;
       text-align: center;
