--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -47,6 +47,11 @@ html {
     @media only screen and (max-width: $bp-largest) {
         font-size: 50%;
     }
+
+    @media only screen and (max-width: $bp-sml) {
+        font-size: 40%;
+    }
+
 }
 *::selection {
     background-color: $color-grey-light;
