--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -3,6 +3,7 @@
     grid-column: full-start / full-end;
     padding: 3rem;
     position: relative;
+    z-index: -1;
 }
 
 .nav {
